--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
-            text-align: center;
+            text-align: left;
         }
         .bold {
             font-weight: bold;
