--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
             <p>Aprende a automatizar tareas en termux con scripts de Python siguiendo esta <a href="https://github.com/Retired64/Automate-Termux/blob/main/readme.md" style="color: #bf3004;">Guía de automatización</a>. Ideal para crear bots y tareas programadas.</p>
         </details>
         <img class="divider" src="gif/linea.gif" alt="divisor Retired64">
+        <img src="gif/linea.gif" alt="divisor Retired64">
+
+        <a href="https://git.io/typing-svg">
+           <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=30&pause=1000&color=BF3004&width=435&lines=COMPILACI%C3%93N+SM64EX-COOP+;Android+desde+termux+%E2%AD%90" alt="Typing SVG">
+         </a>
+
+         <p class="bold">- Guia detallada en <a href="https://youtu.be/WHoekKbzje4" style="color: #bf3004;">Youtube</a> y aquí a continuación más Info al respecto y leer Descripción del video.</p>
+         <img src="https://raw.githubusercontent.com/Retired64/Retired64/main/gif/Mario/Super-Mario-64-Gif-mario-37744271-240-320.gif" width="20" alt="Mario GIF">
+
     </div>
 </body>
 </html>
