--- a/index.html
+++ b/index.html
@@ -66,6 +66,53 @@
         .section-title img {
             vertical-align: middle;
         }
+.miniblock {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+}
+
+.miniblock-image {
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+    border-radius: 4px;
+}
+
+.miniblock-content {
+    flex: 1;
+}
+
+.miniblock-date {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    color: #888;
+    margin-bottom: 5px;
+}
+
+.miniblock-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+.miniblock-title {
+    font-size: 18px;
+    margin: 5px 0;
+    color: #333;
+}
+
+.miniblock-description {
+    font-size: 14px;
+    color: #555;
+    margin: 0;
+}
+
     </style>
 </head>
 <body>
@@ -90,7 +137,7 @@
             Contáctame
         </div>
         <div class="contact-links">
-            <a href="https://youtube.com/@tetired64">YouTube</a>
+            <a href="https://youtube.com/@Retired64">YouTube</a>
             <a href="https://www.tiktok.com/@_retired64">TikTok</a>
             <a href="https://t.me/Retired64">Telegram</a>
             <a href="https://discord.com/invite/thuhUH2WNX">Discord</a>
