--- a/index.html
+++ b/index.html
@@ -194,7 +194,20 @@
 
          <p class="bold">- Guia detallada en <a href="https://youtu.be/WHoekKbzje4" style="color: #bf3004;">Youtube</a> y aquí a continuación más Info al respecto y leer Descripción del video.</p>
          <img src="https://raw.githubusercontent.com/Retired64/Retired64/main/gif/Mario/Super-Mario-64-Gif-mario-37744271-240-320.gif" width="20" alt="Mario GIF">
-
+<details>
+  <summary class="bold">🏆 Mini Blog Termux Help</summary>
+<div class="miniblock">
+    <img src="https://raw.githubusercontent.com/Retired64/Bot-discord-retired64/main/logo.jpg" alt="Discord Bot js By Retired64" class="miniblock-image">
+    <div class="miniblock-content">
+        <div class="miniblock-date">
+            <img src="https://raw.githubusercontent.com/Retired64/Retired64/main/img/profile.png" alt="Retired64 icono" class="miniblock-icon">
+            <span>30 de agosto de 2024</span>
+        </div>
+        <h3 class="miniblock-title">BOT DISCORD.JS TERMUX</h3>
+        <p class="miniblock-description">Este es un bot diseñado para funcionar de forma local en termux o 24/7 en discord.</p>
+    </div>
+</div>
+</details>
     </div>
 </body>
 </html>
