--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #0f3c6a;
 }
 
 .miniblock-image {
@@ -194,6 +194,8 @@
 
          <p class="bold">- Guia detallada en <a href="https://youtu.be/WHoekKbzje4" style="color: #bf3004;">Youtube</a> y aquí a continuación más Info al respecto y leer Descripción del video.</p>
          <img src="https://raw.githubusercontent.com/Retired64/Retired64/main/gif/Mario/Super-Mario-64-Gif-mario-37744271-240-320.gif" width="20" alt="Mario GIF">
+        <img class="divider" src="gif/linea.gif" alt="divisor Retired64">
+	<br>
 <details>
   <summary class="bold">🏆 Mini Blog Termux Help</summary>
 <div class="miniblock">
@@ -204,10 +206,11 @@
             <span>30 de agosto de 2024</span>
         </div>
         <h3 class="miniblock-title">BOT DISCORD.JS TERMUX</h3>
-        <p class="miniblock-description">Este es un bot diseñado para funcionar de forma local en termux o 24/7 en discord.</p>
+        <p class="miniblock-description">Este es un bot diseñado para funcionar de forma local en termux o 24/7 en discord <a href="https://github.com/Retired64/Bot-discord-retired64">Ver Repositorio</a>.</p>
     </div>
 </div>
 </details>
+<br>
     </div>
 </body>
 </html>
