--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 .miniblock-title {
     font-size: 18px;
     margin: 5px 0;
-    color: #333;
+    color: #000;
 }
 
 .miniblock-description {
@@ -113,7 +113,7 @@
     margin: 0;
 }
 .highlight-link {
-    color: #BF3004; /* Color de texto */
+    color: #890707; /* Color de texto */
     text-decoration: none; /* Elimina el subrayado por defecto */
     font-weight: bold; /* Hace el texto en negrita */
     border-bottom: 2px solid #BF3004; /* Añade un borde inferior */
